--- a/books.html
+++ b/books.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c78861cc4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Document</title>
+    <title>Books by Tonya Rice</title>
 </head>
 <body>
     <div class="nav-bar container">
@@ -38,13 +38,13 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/books.html">Books</a>
+                    <a class="nav-link active" aria-current="page" href="/books.html" target="_blank">Books</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="nav-link" href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i>
+                    <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                   </li>
               </ul>
