--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c78861cc4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Document</title>
+    <title>Contact Me | Tonya Rice, Front End Developer</title>
 </head>
 <body>
     <div class="nav-bar container">
@@ -44,7 +44,7 @@
                     <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="nav-link" href="https://github.com/tonyarice"><i class="fa fa-github" target="_blank" aria-hidden="true"></i>
+                    <a class="nav-link" href="https://github.com/tonyarice" target="_blank" ><i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                   </li>
               </ul>
