--- a/about.html
+++ b/about.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About Tonya Rice. Tonya is a front-end developer based in Virginia.">
+    <title>About Tonya Rice | Front End Developer</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c78861cc4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>About Tonya Rice | Front End Developer</title>
 </head>
 <body>
     <div class="nav-bar container">
@@ -106,10 +108,10 @@ When I'm not writing or coding, I enjoy using my time power walking, weightlifti
   <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
   </div>
   <div class="social-links d-flex justify-content-center mb-5">
-    <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-    <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-    <a href="https://www.linkedin.com/in/tonyarice"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-    <a href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="mailto:tonyacodes@gmail.com" title="Email Tonya"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+    <a href="https://www.twitter.com/coolcodechick" title="Twitter Profile"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/tonyarice" title="LinkedIn Profile"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+    <a href="https://github.com/tonyarice" title="Github Profile"><i class="fa fa-github" aria-hidden="true"></i></a>
     
   </div>
 </footer>
