--- a/work.html
+++ b/work.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Featured websites developed by Tonya Rice. Tonya is a front-end developer based in Virginia.">
+    <title>Featured Projects | Tonya Rice, Front End Developer</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c78861cc4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/styles.css" />
-    <title>Featured Projects | Tonya Rice, Front End Developer</title>
+    
 </head>
 <body>
     <div class="nav-bar container">
@@ -44,7 +47,7 @@
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github"  aria-hidden="true"></i>
+                    <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                   </li>
               </ul>
@@ -59,14 +62,14 @@
   </div>
   <div class="project-description p-3">
   <div class="row">
-    <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Free Short Story Website</h3>
       <p>Created using HTML, CSS, and Vanilla JS</p>
     <div class="navigation-links text-center">
       <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592" class="btn btn-branding mt-0 mb-5">Launch Short Story Website</a>
     </div>
     </div>
-    <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather" class="img-fluid shadow-md p-4 border rounded" /></a>
+    <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
     <p>Created using HTML, CSS, Vanilla JS, and API</p>
     <div class="navigation-links text-center">
@@ -75,14 +78,14 @@
   </div>
   </div>
   <div class="row mt-3">
-    <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
       <p>Created using HTML, CSS, React.js and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
-    <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Dictionary App</h3>
       <p>Created using HTML, CSS, React.js and API</p>
     <div class="navigation-links text-center">
@@ -91,14 +94,14 @@
   </div>
 </div>
     <div class="row mt-3">
-    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
       <p>Created using HTML, CSS, Vanilla JS, and Figma</p>
     <div class="navigation-links text-center">
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
     </div>
   </div>
-    <div class="col-md-6"><a href="#"><img src="images-2/sitecomingsoon1.png" alt="real estate" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="#"><img src="images-2/sitecomingsoon1.png" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <p>Created using HTML, CSS, and Vanilla JS</p>
       <!-- make coming soon image if needed -->
@@ -177,13 +180,13 @@
       </div>
       </div>
       <div class="d-flex justify-content-center mb-4">
-      <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
+      <a href="mailto:tonyaricecodes@gmail.com" class="email-link" title="Email Tonya">tonyaricecodes@gmail.com</a>
       </div>
       <div class="social-links d-flex justify-content-center mb-5">
-        <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/tonyarice"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-        <a href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="mailto:tonyacodes@gmail.com" title="Email Tonya"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+        <a href="https://www.twitter.com/coolcodechick" title="Twitter Profile"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/tonyarice" title="LinkedIn Profile"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a href="https://github.com/tonyarice" title="Github Profile"><i class="fa fa-github" aria-hidden="true"></i></a>
         
       </div>
     </footer>
