--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text">
-<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. I also work with Figma and Canva for design enhancement. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, SEO, and Responsive Web Design. I also work with Figma and Canva for design enhancement. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
 Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing an opportunity in coding as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, or book/literary entity.
 <br />
