--- a/index.html
+++ b/index.html
@@ -83,13 +83,16 @@
     <a href="/contact.html" class="btn btn-branding mt-3">Contact Me</a>
   </div>
   
-  <ul class="details d-flex list-group list-group-horizontal justify-content-center mt-4">
+  <div class="details">
+  <ul class="d-flex list-group list-group-horizontal justify-content-center mt-4">
     <li><a>EMPATHETIC</a></li>
     <li><a>PERSONABLE</a></li>  
     <li><a>CRITICAL THINKER</a></li>  
     <li><a>RESULTS-ORIENTED</a></li> 
     <li><a>STRONG ATTENTION TO DETAIL</a></li>
   </ul>
+</div>
+
   </div>
   <!-- </div>   -->
   
